# aur-gui

./: README.md  pkgmanager_gui.pyw  pyproject.toml
pkgmanager/: __init__.py  backend.py  config.py  exceptions.py  helpers.py  models.py  permissions.py
tests/: test_backend.py  test_helpers.py  test_permissions.py
