[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aur-gui"
version = "0.1.0"
description = "Unified AUR/Pacman backend library for Arch Linux"
requires-python = ">=3.9"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["pkgmanager*"]
